# hexlet-module-3

./: .gitignore  README.md  my_test_file.py  pyproject.toml  vebinar_11.07,24.py
01.oop/: 00_create_classe.py  01_method_init.py  02_HourClock.py  03_LimitedCounter.py  04_Exception.py  05_BuildBinaryTree.py  08_search_tree.py  (+7 more)
hexlet-flask-example/: Makefile  README.md  app_valid.py  build.sh  courses.py  ex_cookies.py  ex_crud_create.py  ex_db.py  ex_flash.py  ex_post_create.py  ex_posts.py  ex_posts_update.py  ex_schools.py  ex_session.py  example.py  example2.py  example3.py  example4.py  forms.py  init.sql  modify_forms.py  pyproject.toml  search.py  users.json  validator.py  validator_db.py
hexlet-flask-example/data/: data2.py  data3.py  data_courses.py  data_forms.py  data_posts.py  repo_cars.py  repo_db.py  repo_post_cc.py  repo_schools.py  repo_users.py  schools.json  users.json
hexlet-flask-example/templates/: bar.html  index4.html  index_cook.html  index_db.html  index_posts.html  index_session.html
hexlet-flask-example/templates/cars/: index.html
hexlet-flask-example/templates/courses/: index.html  index_flash.html  layout.html  new_v.html  show_c.html
hexlet-flask-example/templates/posts/: edit.html  form.html  index.html  index_cc.html  index_up.html  new.html  new_up.html  show.html
hexlet-flask-example/templates/products/: form.html  index.html  new.html  show.html
hexlet-flask-example/templates/schools/: edit.html  index.html  show.html
hexlet-flask-example/templates/users/: index.html  index_search.html  new.html  new_cc.html  show.html
(+119 files in other folders)
