[tool.poetry]
name = "module-3"
version = "0.1.0"
description = ""
authors = ["IR"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flake8 = "^7.0.0"
pytest = "^8.2.2"
gunicorn = "^23.0.0"
faker = "^33.0.0"
schema = "^0.7.7"
bs4 = "^0.0.2"
requests = "^2.32.3"
github = "^1.2.7"
pook = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
